--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,15 @@
   box-sizing:border-box;  
 }
 
+header{
+	display: flex;
+	justify-content: space-between;
+}
+
+
+
+section#s1{
+	background-color: rgba(0,0,255,0.8);
+	width:
+}
+
