--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ header{
 	background-color: white;
 	width: 100%;
 	position: sticky;
-	border: 1px solid lightgrey;
+	border-bottom: 1px solid lightgrey;
 	top: 0;
 }
 
@@ -28,7 +28,17 @@ a.link-header{
 	padding:1.2em 0.5em 1em 0.5em;
 	text-decoration: none;
 	color: black;
+	outline: none;
 } 
+
+a.link-header:hover{
+	opacity: .5;
+}
+
+a.link-header:focus{
+	box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+	border-radius: 0.3em;
+}
 
 li{
 	list-style-type: none;
@@ -42,12 +52,28 @@ form{
 	margin:1.2em 1em 1em 1em;
 }
 
+form:hover{
+	opacity: .5;
+}
+
+form:focus{
+	box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+	border-radius: 0.3em;
+}
+
+
 /*mobiel nav bar in de header*/
 
 #link-logo{
 	float: left;
 	display: block;
 	padding: 0.9em 0.7em 1.2em 0.9em;
+	outline: none;
+}
+
+#link-logo:focus{
+	box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+	border-radius: 0.3em;
 }
 
 #nav-logo{
@@ -58,8 +84,8 @@ form{
 
 nav{
 	display: flex;
-	position: relative;
 	padding-top: 0.5em;
+	background-color: white;
 }
 
 header nav button{
@@ -72,6 +98,11 @@ header nav button{
 	outline: none; 
 }
 
+header nav button:focus{
+	box-shadow: 5px 5px 10px rgba(0,0,0,.5);
+	border-radius: 0.3em;
+}
+
 header nav button img{
 	width: 2.5em;
 	height: auto;
@@ -82,15 +113,21 @@ header nav button img{
 
 /*Humburger icon*/
 body header ul{
-	display: none;
+	position: absolute;
+	width: 375px;
+	top: -25em;
+	background-color: white;
+	display: ;
 	border-top: 1px solid grey;
 	padding: 0;
-	transition: 2s;
+	transition: 1s;
+	margin: 0;
+	z-index: -1;
 }
 
 body header ul.open{
 	display: block;
-	margin:0;
+	top: 4.5em;
 }
 
 header ul li a{
@@ -136,7 +173,7 @@ header ul li a{
 		right: 0;
 		display: flex;
 		border: none;
-		margin: 0;
+		margin: 0em 30em 0em 0em;
 		padding-top: 0.5em;
 
 	}
@@ -180,7 +217,7 @@ header ul li a{
 
 }
 
- main section:first-of-type h1{
+ main section:first-of-type h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -223,8 +260,9 @@ a#section1-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 1.5em;
 }
-	main section:first-of-type h1{
+	main section:first-of-type h2{
 		grid-column: 2/3;
 		grid-row: 2;
 }
@@ -326,7 +364,7 @@ main section:nth-of-type(3) {
 
 }
 
-main section:nth-of-type(3) h1{
+main section:nth-of-type(3) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -367,8 +405,9 @@ a#section3-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 1.5em;
 }
-	main section:nth-of-type(3) h1{
+	main section:nth-of-type(3) h2{
 		grid-column: 3/4;
 		grid-row: 2;
 }
@@ -409,7 +448,7 @@ main section:nth-of-type(4) {
 
 }
 
-main section:nth-of-type(4) h1{
+main section:nth-of-type(4) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -450,8 +489,9 @@ a#section4-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 1.5em;
 }
-	main section:nth-of-type(4) h1{
+	main section:nth-of-type(4) h2{
 		grid-column: 2/3;
 		grid-row: 2;
 }
@@ -490,7 +530,7 @@ main section:nth-of-type(5) {
 
 }
 
-main section:nth-of-type(5) h1{
+main section:nth-of-type(5) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -531,8 +571,9 @@ a#section5-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 1.5em;
 }
-	main section:nth-of-type(5) h1{
+	main section:nth-of-type(5) h2{
 		grid-column: 3/4;
 		grid-row: 2;
 }
@@ -571,7 +612,7 @@ main section:nth-of-type(6) {
 
 }
 
-main section:nth-of-type(6) h1{
+main section:nth-of-type(6) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -612,8 +653,9 @@ a#section6-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 2em;
 }
-	main section:nth-of-type(6) h1{
+	main section:nth-of-type(6) h2{
 		grid-column: 2/3;
 		grid-row: 2;
 }
@@ -651,7 +693,7 @@ main section:nth-of-type(7) {
   	align-items: center;
 }
 
-main section:nth-of-type(7) h1{
+main section:nth-of-type(7) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -690,10 +732,10 @@ a#section7-link{
 	main section:nth-of-type(7)  {
 		display: grid;
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
-  		grid-template-rows: 10% 1fr 1fr 1fr 10%;
+  		grid-template-rows: 7% 1fr 1fr 1fr 7%;
   		font-size: 1.4em;
 }
-	main section:nth-of-type(7) h1{
+	main section:nth-of-type(7) h2{
 		grid-column: 3/4;
 		grid-row: 2;
 }
@@ -701,12 +743,12 @@ a#section7-link{
 	main section:nth-of-type(7) ul{
 		grid-column-start: 3;
 		grid-row: 3;
-		margin: 1em;
+		margin: 0.5em;
 }
 
 	img#internet-vanaf20-img{
 		grid-column-start: 2;
-		grid-row: 2 / 5;
+		grid-row: 1 / 5;
 		width: 20em;
 		margin: 0;
 }
@@ -732,7 +774,7 @@ main section:nth-of-type(8) {
   	align-items: center;
 }
 
-main section:nth-of-type(8) h1{
+main section:nth-of-type(8) h2{
 	margin:1rem;
 	grid-column: 2/3;
 	grid-row: 2;
@@ -773,8 +815,9 @@ a#section8-link{
 		grid-template-columns: 12.5% 1fr 1fr 12.5%;
   		grid-template-rows: 10% 1fr 1fr 1fr 10%;
   		font-size: 1.4em;
+  		padding-bottom: 0.5em;
 }
-	main section:nth-of-type(8) h1{
+	main section:nth-of-type(8) h2{
 		grid-column: 2/3;
 		grid-row: 2;
 }
@@ -898,6 +941,7 @@ footer section:first-of-type ul{
 footer section:first-of-type ul li{
 	padding: 0em 1em 0em 0.5em;
 	margin-bottom: 0.7em;
+	position: relative;
 }
 
 footer section:first-of-type ul button{
@@ -912,20 +956,25 @@ footer section:first-of-type ul button{
 	outline: none;
 }
 
-footer section:first-of-type ul li ul{
-	display: none;
-	transition: 2s;
+footer section:first-of-type ul li ul{ 
 	background-color: rgba(21,21,21,1);
 	padding: 0;
 }
 
-footer section:first-of-type ul li ul.anders{
+footer section:first-of-type ul li ul{
 	display: block;
+	position: absolute;
+	right: -20em;
+	transition: 0.5s;
+
 }
 
-footer section:first-of-type ul li button.anders{
-	
+footer section:first-of-type ul li ul.anders{
+	display: block;
+	position: inherit;
+	right: 0em;
 }
+
 
 footer section:first-of-type ul li ul li{
 	padding: 0.5em;
