--- a/styles/style.css
+++ b/styles/style.css
@@ -988,8 +988,13 @@ footer section:first-of-type ul li ul li{
 	justify-content: space-around;
 	padding: 3em 3.5em 3em 3.5em;
 }
-	footer section:first-of-type ul li ul{
-	display: block;
+
+footer section:first-of-type ul li{
+	position: inherit;
+}
+
+footer section:first-of-type ul li ul{
+	position: inherit;
 }
 }
 
