--- a/styles/style2.css
+++ b/styles/style2.css
@@ -493,10 +493,15 @@ footer section:first-of-type ul li ul li{
 	footer section:first-of-type ul{
 	display: flex;
 	justify-content: space-around;
-	padding: 3em 3.5em 3em 3.5em;
+	padding: 1em 1.2em 1em 1.2em;
+}
+	footer section:first-of-type ul li{
+	padding: 0em 1em 0em 0.5em;
+	margin-bottom: 0.7em;
+	position: inherit;
 }
 	footer section:first-of-type ul li ul{
-	display: block;
+	position: inherit;
 }
 	footer section:first-of-type ul li button{
 		font-size: 2.7em;
